--- a/content/00_geoprocessing.ipynb
+++ b/content/00_geoprocessing.ipynb
@@ -3889,6 +3889,60 @@
     "rel=\"license\" href=\"http://creativecommons.org/licenses/by-nc-sa/4.0/\">Creative\n",
     "Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "geopandas==0.8.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# List of used packages to be added to the `requirements.txt` file (ref: https://stackoverflow.com/questions/40428931/package-for-listing-version-of-packages-used-in-a-jupyter-notebook)\n",
+    "import pkg_resources\n",
+    "import types\n",
+    "def get_imports():\n",
+    "    for name, val in globals().items():\n",
+    "        if isinstance(val, types.ModuleType):\n",
+    "            # Split ensures you get root package, \n",
+    "            # not just imported function\n",
+    "            name = val.__name__.split(\".\")[0]\n",
+    "\n",
+    "        elif isinstance(val, type):\n",
+    "            name = val.__module__.split(\".\")[0]\n",
+    "\n",
+    "        # Some packages are weird and have different\n",
+    "        # imported names vs. system/pip names. Unfortunately,\n",
+    "        # there is no systematic way to get pip names from\n",
+    "        # a package's imported name. You'll have to add\n",
+    "        # exceptions to this list manually!\n",
+    "        poorly_named_packages = {\n",
+    "            \"PIL\": \"Pillow\",\n",
+    "            \"sklearn\": \"scikit-learn\"\n",
+    "        }\n",
+    "        if name in poorly_named_packages.keys():\n",
+    "            name = poorly_named_packages[name]\n",
+    "\n",
+    "        yield name\n",
+    "imports = list(set(get_imports()))\n",
+    "\n",
+    "# The only way I found to get the version of the root package\n",
+    "# from only the name of the package is to cross-check the names \n",
+    "# of installed packages vs. imported packages\n",
+    "requirements = []\n",
+    "for m in pkg_resources.working_set:\n",
+    "    if m.project_name in imports and m.project_name!=\"pip\":\n",
+    "        requirements.append((m.project_name, m.version))\n",
+    "\n",
+    "for r in requirements:\n",
+    "    print(\"{}=={}\".format(*r))"
+   ]
   }
  ],
  "metadata": {
